--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -1,28 +1,32 @@
 Problem Type:
     Type: TwoPlates
+    
+Geometry:
+    Length X: 0.2
+    Length Y: 0.005248
+    
 Processing Parameters:
     Temperature: 648
     Pressure: 0.1
     Power Density: 2613203000
+    
 Materials:
   Material1:
     Thermal Conductivity X: 0.65
     Thermal Conductivity Y: 0.65
     Density: 1598
     Cp: 930
-    Domain Initial Temperature: 293.
+    Initial Temperature: 293.
   Material2:
     Thermal Conductivity X: 0.65
     Thermal Conductivity Y: 0.65
     Density: 1598
     Cp: 930
-    Domain Initial Temperature: 293.
+    Initial Temperature: 293.
 
 Simulation:
   Time Step: 0.0001
   Number Time Steps: 10001
-  lenX: 0.2
-  lenY: 0.005248
   Number of Elements X: 200
   Number of Elements Y: 128
 
@@ -37,3 +41,4 @@ Plot:
   
 Animation:
     name: temperature
+
