--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -1,56 +1,73 @@
 Problem Type:
     Type: TwoPlates
-    
+
 Geometry:
-    Length X: 0.2
-    Top Plate Thickness: 0.0016
-    Bottom Plate Thickness: 0.0016
-    HE: 0.0002   
-Materials:
-  Top Adherent:
-    Thermal Conductivity X: 0.65
-    Thermal Conductivity Y: 0.65
-    Density: 1598
-    Specific Heat Capacity: 930
-  HE:
-    Thermal Conductivity X: 0.65
-    Thermal Conductivity Y: 0.65
-    Density: 1598
-    Specific Heat Capacity: 930  
-  Bottom Adherent:
-    Thermal Conductivity X: 0.65
-    Thermal Conductivity Y: 0.65
-    Density: 1598
-    Specific Heat Capacity: 930
-
-Boundary Condition:
-    Initial Temperature Top Adherent: 293
-    Initial Temperature HE: 293
-    Initial Temperature Bottom Adherent: 293
-    Input Power Density: 261320300
-    Consolidation Pressure: 0.1
-    Ideal Temperature: 648
-    Room Temperature: 293
-    Convective Coefficient: 150
+    Top Plate:
+        Thickness (Y): 0.4
+        Width (X): 10.0
+    Heat Element:
+        Thickness (Y): 0.01
+        Width (X): 10.0
+    Bottom Plate:
+        Thickness (Y): 0.4
+        Width (X): 10.0
     
-Simulation:
-  Time Step: 0.0002
-  Number Time Steps: 30001
-  Number of Elements X: 200
-  Number of Elements Bottom Plate Thickness: 40
-  Number of Elements HE: 1
-  Number of Elements Top Plate Thickness: 40
-  
+Mesh:
+    Top Plate:
+      Number of Elements in X: 10
+      Number of Elements in Y: 10
+    Heat Element: 
+      Number of Elements in X: 10
+      Number of Elements in Y: 10
+    Bottom Plate:
+      Number of Elements in X: 10
+      Number of Elements in Y: 10
 
-Plot:
-  Temp Output Folder: "./output/Temperature/"
-  Dic Output Folder: "./output/Dic/"
-  figure temperature name: Temperature
-  figure dic name: Dic
-  Color Interpolation: 50
-  Color Map: "inferno"
-  plot interval: 500
-  
-Animation:
-    Temperature name: temperature
-    Dic name: Dic
+Materials:
+    Bottom Plate:
+        Thermal Conductivity X: 0.65
+        Thermal Conductivity Y: 0.65
+        Density: 1598
+        Specific Heat Capacity: 930
+    Heat Element:
+        Thermal Conductivity X: 0.65
+        Thermal Conductivity Y: 0.65
+        Density: 1598
+        Specific Heat Capacity: 930 
+    Top Plate:
+        Thermal Conductivity X: 0.65
+        Thermal Conductivity Y: 0.65
+        Density: 1598
+        Specific Heat Capacity: 930   
+
+Boundary Conditions:
+    Top Plate Top:
+      Models: Heat
+      Initial Temperature: 293
+    Top Plate Left:
+      Models: Heat
+      Initial Temperature: 293
+    Top Plate Right:
+      Models: Heat
+      Initial Temperature: 293
+    Bottom Plate Left:
+      Models: Heat
+      Initial Temperature: 293
+    Bottom Plate Right:
+      Models: Heat
+      Initial Temperature: 293
+    Bottom Plate Bottom:
+      Models: Heat
+      Initial Temperature: 293
+      
+Initial Conditions:
+    Top Plate:
+      Models: Heat
+      Initial Temperature: 292
+    Heat Element:
+      Models: Heat
+      Initial Temperature: 291
+      Input Heat: 1
+    Bottom Plate:
+      Models: Heat
+      Initial Temperature: 290
