--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -19,7 +19,7 @@ Mesh:
       Number of Elements in Y: 10
     Heat Element: 
       Number of Elements in X: 10
-      Number of Elements in Y: 10
+      Number of Elements in Y: 1
     Bottom Plate:
       Number of Elements in X: 10
       Number of Elements in Y: 10
@@ -30,16 +30,22 @@ Materials:
         Thermal Conductivity Y: 0.65
         Density: 1598
         Specific Heat: 930
+        DicW0OverB0: 0.45
+        DicA0OverB0: 0.85
     Heat Element:
         Thermal Conductivity X: 0.65
         Thermal Conductivity Y: 0.65
         Density: 1598
         Specific Heat: 930 
+        DicW0OverB0: 0.45
+        DicA0OverB0: 0.85
     Top Plate:
         Thermal Conductivity X: 0.65
         Thermal Conductivity Y: 0.65
         Density: 1598
-        Specific Heat: 930   
+        Specific Heat: 930
+        DicW0OverB0: 0.45
+        DicA0OverB0: 0.85        
 
 Boundary Conditions:
     Top Plate Top:
@@ -65,10 +71,12 @@ Initial Conditions:
     Top Plate:
       Models: Conduction   
       Initial Temperature: 292
+      Power Input Density: 0
     Heat Element:
       Models: Conduction
       Initial Temperature: 295
-      Input Heat: 1
+      Power Input Density: 1
     Bottom Plate:
       Models: Conduction
+      Power Input Density: 0
       Initial Temperature: 290
