--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -30,53 +30,69 @@ Materials:
         Thermal Conductivity Y: 0.65
         Density: 1598
         Specific Heat: 930
-        DicW0OverB0: 0.45
-        DicA0OverB0: 0.85
     Heat Element:
         Thermal Conductivity X: 0.65
         Thermal Conductivity Y: 0.65
         Density: 1598
         Specific Heat: 931
-        DicW0OverB0: 0.45
-        DicA0OverB0: 0.85
     Top Plate:
         Thermal Conductivity X: 0.65
         Thermal Conductivity Y: 0.65
         Density: 1598
-        Specific Heat: 932
-        DicW0OverB0: 0.45
-        DicA0OverB0: 0.85        
+        Specific Heat: 932    
 
 Boundary Conditions:
-    Top Plate Top:
-        Models: Heat
-        Initial Temperature: 293
-    Top Plate Left:
-        Models: Heat
-        Initial Temperature: 293
-    Top Plate Right:
-        Models: Heat
-        Initial Temperature: 293
-    Bottom Plate Left:
-        Models: Heat
-        Initial Temperature: 293
-    Bottom Plate Right:
-        Models: Heat
-        Initial Temperature: 293
-    Bottom Plate Bottom:
-        Models: Heat
-        Initial Temperature: 293
-      
+    Top Plate:
+        Left Edge: 
+            Models: 
+                Convection:
+                    Temperature: 293
+        Top Edge:
+            Models: 
+                Convection:
+                    Temperature: 293
+        Right Edge:
+            Models: 
+                Convection:
+                    Temperature: 293
+        Bottom Edge:
+            Models:
+                Intimate Contact:
+                    W0OverB0: 0.45
+                    A0OverB0: 0.85
+    Heat Element:
+        Models:
+            Heating:
+                Input Power Density: 1000
+            Intimate Contact:
+                W0OverB0: 0.45
+                A0OverB0: 0.85
+    Bottom Plate:  
+        Left Edge:
+            Models: 
+                Convection:
+                    Temperature: 293
+        Bottom Edge:
+            Models: 
+                Convection:
+                    Temperature: 293
+        Right Edge:
+            Models: 
+                Convection:
+                    Temperature: 293 
+        Top Edge:
+            Models:
+                Intimate Contact:
+                    W0OverB0: 0.45
+                    A0OverB0: 0.85
+
 Initial Conditions:
     Top Plate:
         Models: Conduction   
         Initial Temperature: 292
-        Power Input Density: 0
     Heat Element:
         Models: Conduction
         Initial Temperature: 295
-        Power Input Density: 1
     Bottom Plate:
         Models: Conduction
-        Power Input Density: 0
         Initial Temperature: 290
