material, initial condition, boundary condition (external and internal) and mesh are now defined in the RectangularDomain objects by methods, not instances. Field now contains all the necessary fields to run a TwoPlates (welding) problem. All the objects, variables and parameters are defined. It is ready to run the solver.

--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -7,10 +7,10 @@ Domains:
             Width (X): 10.0
             Pos: 3
         Material:
-            Thermal Conductivity X: 3
-            Thermal Conductivity Y: 37
-            Density: 3
-            Specific Heat: 3
+            Thermal Conductivity X: 0.6
+            Thermal Conductivity Y: 0.6
+            Density: 1500
+            Specific Heat: 900
             Viscosity:
                 A: 0.0056
                 Ea: 74400
@@ -20,30 +20,30 @@ Domains:
         Boundary Condition:
             External:
                 Left Edge: 
-                    Temperature: 100
-                    Convection Coefficient: 101
+                    Room Temperature: 270
+                    Convection Coefficient: 100
                 Right Edge:
-                    Temperature: 110
-                    Convection Coefficient: 111
+                    Room Temperature: 271
+                    Convection Coefficient: 101
                 Top Edge:
-                    Temperature: 120
-                    Convection Coefficient: 121
+                    Room Temperature: 272
+                    Convection Coefficient: 102
             Internal:
                 Bottom Edge:
                     Horizontal asperity ratio: 4
                     Vertical asperity ratio: 4
         Initial Condition:
-            Temperature: 450
+            Temperature: 270
     Bottom Plate:
         Geometry:
             Thickness (Y): 0.4
             Width (X): 10.0
             Pos: 1
         Material: 
-            Thermal Conductivity X: 1
-            Thermal Conductivity Y: 17
-            Density: 1
-            Specific Heat: 1
+            Thermal Conductivity X: 0.7
+            Thermal Conductivity Y: 0.7
+            Density: 1600
+            Specific Heat: 910
             Viscosity:
                 A: 0.0056
                 Ea: 74400
@@ -53,30 +53,30 @@ Domains:
         Boundary Condition:
             External:
                 Left Edge: 
-                    Temperature: 200
-                    Convection Coefficient: 201
+                    Room Temperature: 280
+                    Convection Coefficient: 110
                 Right Edge:
-                    Temperature: 210
-                    Convection Coefficient: 211
+                    Room Temperature: 281
+                    Convection Coefficient: 111
                 Bottom Edge:
-                    Temperature: 220
-                    Convection Coefficient: 221
+                    Room Temperature: 282
+                    Convection Coefficient: 112
             Internal:
                 Top Edge:                    
                     Horizontal asperity ratio: 1
                     Vertical asperity ratio: 1
         Initial Condition: 
-            Temperature: 450
+            Temperature: 280
     Middle Plate:
         Geometry:
             Thickness (Y): 0.01
             Width (X): 10.0
             Pos: 2
         Material:
-            Thermal Conductivity X: 2
-            Thermal Conductivity Y: 27
-            Density: 2
-            Specific Heat: 2        
+            Thermal Conductivity X: 0.8
+            Thermal Conductivity Y: 0.8
+            Density: 2000
+            Specific Heat: 700        
             Viscosity: 
                 A: 0.0056
                 Ea: 74400
@@ -86,11 +86,11 @@ Domains:
         Boundary Condition:  
             External:
                 Left Edge: 
-                    Temperature: 300
-                    Convection Coefficient: 301
+                    Room Temperature: 300
+                    Convection Coefficient: 120
                 Right Edge:
-                    Temperature: 310
-                    Convection Coefficient: 311
+                    Room Temperature: 301
+                    Convection Coefficient: 121
             Internal:
                 Top Edge:
                     Horizontal asperity ratio: 2
