--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -8,25 +8,32 @@ Domains:
             Pos: 3
         Material:
             Thermal Conductivity X: 3
-            Thermal Conductivity Y: 3
+            Thermal Conductivity Y: 37
             Density: 3
             Specific Heat: 3
+            Viscosity:
+                A: 0.0056
+                Ea: 74400
         Mesh:
             Number of Elements in X: 10
             Number of Elements in Y: 10
         Boundary Condition:
-            Left Edge:
-                Temperature: 3
-            Top Edge:
-                Temperature: 3
-            Right Edge:
-                Temperature: 3
-            Bottom Edge:
-                Horizontal asperity ratio: 3
-                Vertical asperity ratio: 3
+            External:
+                Left Edge: 
+                    Room Temperature: 100
+                    Convection Coefficient: 101
+                Right Edge:
+                    Room Temperature: 110
+                    Convection Coefficient: 111
+                Top Edge:
+                    Room Temperature: 120
+                    Convection Coefficient: 121
+            Internal:
+                Bottom Edge:
+                    Horizontal asperity ratio: 4
+                    Vertical asperity ratio: 4
         Initial Condition:
-            Initial Temperature: 3
-        
+            Temperature: 450
     Bottom Plate:
         Geometry:
             Thickness (Y): 0.4
@@ -34,25 +41,32 @@ Domains:
             Pos: 1
         Material: 
             Thermal Conductivity X: 1
-            Thermal Conductivity Y: 1
+            Thermal Conductivity Y: 17
             Density: 1
             Specific Heat: 1
+            Viscosity:
+                A: 0.0056
+                Ea: 74400
         Mesh:
             Number of Elements in X: 10
             Number of Elements in Y: 10
         Boundary Condition:
-            Left Edge:
-                Temperature: 1
-            Bottom Edge:
-                Temperature: 1
-            Right Edge:
-                Temperature: 1 
-            Top Edge:
-                Horizontal asperity ratio: 1
-                Vertical asperity ratio: 1
+            External:
+                Left Edge: 
+                    Room Temperature: 200
+                    Convection Coefficient: 201
+                Right Edge:
+                    Room Temperature: 210
+                    Convection Coefficient: 211
+                Bottom Edge:
+                    Room Temperature: 220
+                    Convection Coefficient: 221
+            Internal:
+                Top Edge:                    
+                    Horizontal asperity ratio: 1
+                    Vertical asperity ratio: 1
         Initial Condition: 
-            Initial Temperature: 1
-        
+            Temperature: 450
     Middle Plate:
         Geometry:
             Thickness (Y): 0.01
@@ -60,23 +74,33 @@ Domains:
             Pos: 2
         Material:
             Thermal Conductivity X: 2
-            Thermal Conductivity Y: 2
+            Thermal Conductivity Y: 27
             Density: 2
             Specific Heat: 2        
+            Viscosity: 
+                A: 0.0056
+                Ea: 74400
         Mesh:
             Number of Elements in X: 10
             Number of Elements in Y: 1
-        Boundary Condition:                
-            Top Edge:
-                Horizontal asperity ratio: 2
-                Vertical asperity ratio: 2
-            Bottom Edge:
-                Horizontal asperity ratio: 2
-                Vertical asperity ratio: 2
+        Boundary Condition:  
+            External:
+                Left Edge: 
+                    Room Temperature: 300
+                    Convection Coefficient: 301
+                Right Edge:
+                    Room Temperature: 310
+                    Convection Coefficient: 311
+            Internal:
+                Top Edge:
+                    Horizontal asperity ratio: 2
+                    Vertical asperity ratio: 2
+                Bottom Edge:
+                    Horizontal asperity ratio: 2
+                    Vertical asperity ratio: 2
         Initial Condition:
-            Initial Temperature: 2   
-            Input Power Density: 2            
-
+            Temperature: 450
+            Input Power Density: 2
 Simulation:
     Step Time: 0.1
     Number of Steps: 1000
